docs/envoy/v1.18.2/_sources/api-v2/admin/v2alpha/server_info.proto.rst.txt
:orphan:

.. warning::
  The v2 xDS API is not supported in Envoy v1.18.0 and above.

.. _envoy_api_file_envoy/admin/v2alpha/server_info.proto:

Server State
============


.. _envoy_api_msg_admin.v2alpha.ServerInfo:

admin.v2alpha.ServerInfo
------------------------

`[admin.v2alpha.ServerInfo proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/admin/v2alpha/server_info.proto#L19>`_

Proto representation of the value returned by /server_info, containing
server version/server status information.

.. code-block:: json

  {
    "version": "...",
    "state": "...",
    "uptime_current_epoch": "{...}",
    "uptime_all_epochs": "{...}",
    "hot_restart_version": "...",
    "command_line_options": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ServerInfo.version:

version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Server version.
  
  
.. _envoy_api_field_admin.v2alpha.ServerInfo.state:

state
  (:ref:`admin.v2alpha.ServerInfo.State <envoy_api_enum_admin.v2alpha.ServerInfo.State>`) State of the server.
  
  
.. _envoy_api_field_admin.v2alpha.ServerInfo.uptime_current_epoch:

uptime_current_epoch
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Uptime since current epoch was started.
  
  
.. _envoy_api_field_admin.v2alpha.ServerInfo.uptime_all_epochs:

uptime_all_epochs
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Uptime since the start of the first epoch.
  
  
.. _envoy_api_field_admin.v2alpha.ServerInfo.hot_restart_version:

hot_restart_version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Hot restart version.
  
  
.. _envoy_api_field_admin.v2alpha.ServerInfo.command_line_options:

command_line_options
  (:ref:`admin.v2alpha.CommandLineOptions <envoy_api_msg_admin.v2alpha.CommandLineOptions>`) Command line options the server is currently running with.
  
  

.. _envoy_api_enum_admin.v2alpha.ServerInfo.State:

Enum admin.v2alpha.ServerInfo.State
-----------------------------------

`[admin.v2alpha.ServerInfo.State proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/admin/v2alpha/server_info.proto#L20>`_


.. _envoy_api_enum_value_admin.v2alpha.ServerInfo.State.LIVE:

LIVE
  *(DEFAULT)* ⁣Server is live and serving traffic.
  
  
.. _envoy_api_enum_value_admin.v2alpha.ServerInfo.State.DRAINING:

DRAINING
  ⁣Server is draining listeners in response to external health checks failing.
  
  
.. _envoy_api_enum_value_admin.v2alpha.ServerInfo.State.PRE_INITIALIZING:

PRE_INITIALIZING
  ⁣Server has not yet completed cluster manager initialization.
  
  
.. _envoy_api_enum_value_admin.v2alpha.ServerInfo.State.INITIALIZING:

INITIALIZING
  ⁣Server is running the cluster manager initialization callbacks (e.g., RDS).
  
  

.. _envoy_api_msg_admin.v2alpha.CommandLineOptions:

admin.v2alpha.CommandLineOptions
--------------------------------

`[admin.v2alpha.CommandLineOptions proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/admin/v2alpha/server_info.proto#L54>`_


.. code-block:: json

  {
    "base_id": "...",
    "concurrency": "...",
    "config_path": "...",
    "config_yaml": "...",
    "allow_unknown_static_fields": "...",
    "reject_unknown_dynamic_fields": "...",
    "admin_address_path": "...",
    "local_address_ip_version": "...",
    "log_level": "...",
    "component_log_level": "...",
    "log_format": "...",
    "log_format_escaped": "...",
    "log_path": "...",
    "service_cluster": "...",
    "service_node": "...",
    "service_zone": "...",
    "file_flush_interval": "{...}",
    "drain_time": "{...}",
    "parent_shutdown_time": "{...}",
    "mode": "...",
    "max_stats": "...",
    "max_obj_name_len": "...",
    "disable_hot_restart": "...",
    "enable_mutex_tracing": "...",
    "restart_epoch": "...",
    "cpuset_threads": "...",
    "disabled_extensions": []
  }

.. _envoy_api_field_admin.v2alpha.CommandLineOptions.base_id:

base_id
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--base-id` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.concurrency:

concurrency
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--concurrency` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.config_path:

config_path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--config-path` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.config_yaml:

config_yaml
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--config-yaml` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.allow_unknown_static_fields:

allow_unknown_static_fields
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--allow-unknown-static-fields` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.reject_unknown_dynamic_fields:

reject_unknown_dynamic_fields
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--reject-unknown-dynamic-fields` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.admin_address_path:

admin_address_path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--admin-address-path` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.local_address_ip_version:

local_address_ip_version
  (:ref:`admin.v2alpha.CommandLineOptions.IpVersion <envoy_api_enum_admin.v2alpha.CommandLineOptions.IpVersion>`) See :option:`--local-address-ip-version` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.log_level:

log_level
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--log-level` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.component_log_level:

component_log_level
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--component-log-level` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.log_format:

log_format
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--log-format` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.log_format_escaped:

log_format_escaped
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--log-format-escaped` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.log_path:

log_path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--log-path` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.service_cluster:

service_cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--service-cluster` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.service_node:

service_node
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--service-node` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.service_zone:

service_zone
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--service-zone` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.file_flush_interval:

file_flush_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) See :option:`--file-flush-interval-msec` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.drain_time:

drain_time
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) See :option:`--drain-time-s` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.parent_shutdown_time:

parent_shutdown_time
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) See :option:`--parent-shutdown-time-s` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.mode:

mode
  (:ref:`admin.v2alpha.CommandLineOptions.Mode <envoy_api_enum_admin.v2alpha.CommandLineOptions.Mode>`) See :option:`--mode` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.max_stats:

max_stats
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) max_stats and max_obj_name_len are now unused and have no effect.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.max_obj_name_len:

max_obj_name_len
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.disable_hot_restart:

disable_hot_restart
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--disable-hot-restart` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.enable_mutex_tracing:

enable_mutex_tracing
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--enable-mutex-tracing` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.restart_epoch:

restart_epoch
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--restart-epoch` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.cpuset_threads:

cpuset_threads
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--cpuset-threads` for details.
  
  
.. _envoy_api_field_admin.v2alpha.CommandLineOptions.disabled_extensions:

disabled_extensions
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) See :option:`--disable-extensions` for details.
  
  

.. _envoy_api_enum_admin.v2alpha.CommandLineOptions.IpVersion:

Enum admin.v2alpha.CommandLineOptions.IpVersion
-----------------------------------------------

`[admin.v2alpha.CommandLineOptions.IpVersion proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/admin/v2alpha/server_info.proto#L55>`_


.. _envoy_api_enum_value_admin.v2alpha.CommandLineOptions.IpVersion.v4:

v4
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_admin.v2alpha.CommandLineOptions.IpVersion.v6:

v6
  ⁣
  

.. _envoy_api_enum_admin.v2alpha.CommandLineOptions.Mode:

Enum admin.v2alpha.CommandLineOptions.Mode
------------------------------------------

`[admin.v2alpha.CommandLineOptions.Mode proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/admin/v2alpha/server_info.proto#L60>`_


.. _envoy_api_enum_value_admin.v2alpha.CommandLineOptions.Mode.Serve:

Serve
  *(DEFAULT)* ⁣Validate configs and then serve traffic normally.
  
  
.. _envoy_api_enum_value_admin.v2alpha.CommandLineOptions.Mode.Validate:

Validate
  ⁣Validate configs and exit.
  
  
.. _envoy_api_enum_value_admin.v2alpha.CommandLineOptions.Mode.InitOnly:

InitOnly
  ⁣Completely load and initialize the config, and then exit without running the listener loop.
  
  
